Updated project configuration in pom.xml